<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context="com.zqw.widely.view.activity.SetActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorgray"
        android:gravity="center"
        android:text="@string/set"
        android:textColor="@android:color/black"
        android:textSize="25dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="16dp"
                android:text="@string/safe"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tv_lo"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="8dp"
                android:gravity="center"
                android:text="@string/Logout"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="16dp"
                android:text="@string/pers"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="8dp"
                android:drawableRight="@mipmap/open"
                android:text="@string/see"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="8dp"
                android:drawableRight="@mipmap/open"
                android:text="@string/lis"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="16dp"
                android:text="@string/manage"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tv_new"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="8dp"
                android:drawableRight="@mipmap/open"
                android:text="@string/tong"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="8dp"
                android:drawableRight="@mipmap/open"
                android:text="@string/rao"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="8dp"
                android:drawableRight="@mipmap/open"
                android:text="@string/Privacy"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="8dp"
                android:drawableRight="@mipmap/open"
                android:text="@string/currency"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="8dp"
                android:drawableRight="@mipmap/open"
                android:text="@string/more"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="italic" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
