<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"

    tools:context="com.zqw.widely.view.activity.LoginActivity"
 >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_uname"
            style="@android:style/Widget.Holo.Light.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/uname"
            android:textStyle="italic" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
>
        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/pwd"
            android:inputType="textPassword"
            android:textStyle="italic" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_loading"
        style="@android:style/Widget.Holo.Light.Button.Inset"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:shadowColor="@color/cardview_light_background"
        android:onClick="onClick"
        android:text="@string/loading"
        android:layout_marginTop="30dp"
        android:textStyle="italic"
 />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_pwd"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:text="@string/cb_pwd"
                android:textStyle="italic" />

            <CheckBox
                android:id="@+id/ch_re"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="0dp"
                android:text="@string/rempwd"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_reg"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_margin="8dp"
                android:text="@string/reg"
                android:textStyle="italic" />

            <TextView
                android:layout_gravity="center"
                android:id="@+id/tv_forpas"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_margin="8dp"
                android:text="@string/forgetpas"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tv_three"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_margin="8dp"
                android:text="@string/loginthree"
                android:textStyle="italic" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
