<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zqw.widely.view.activity.DetailInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorgray"
            android:gravity="center"
            android:text="@string/perinfo"
            android:textColor="@android:color/black"
            android:textSize="25dp" />

        <LinearLayout
            android:id="@+id/layout_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.zqw.widely.view.activity.CircleImageView
                android:id="@+id/civ_pho"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                app:civ_border_color="@color/gray"
                app:civ_border_width="1dp"
                app:srcCompat="@mipmap/ic_launcher" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorbcgray" />

        <TextView
            android:id="@+id/tv_sex"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:drawableRight="@mipmap/open"
            android:text="@string/sex"
            android:textSize="32sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorbcgray" />

        <TextView
            android:id="@+id/tv_age"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:drawableRight="@mipmap/open"
            android:text="@string/age"
            android:textSize="32sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorbcgray" />

        <TextView
            android:id="@+id/tv_add"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:drawableRight="@mipmap/open"
            android:onClick="onClick"
            android:text="@string/address"
            android:textSize="32sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorbcgray" />

        <Button
            android:id="@+id/com"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@color/colorbcgray"
            android:text="@string/commit" />
    </LinearLayout>
</ScrollView>
